<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--Application Name-->
    <string name="app_name">Android Ebook App</string>

    <!--AdMob Configuration -->
    <string name="admob_publisher_id">pub-3940256099942544</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_unit_id">ca-app-pub-3940256099942544/1033173712</string>

    <!--privacy policy url-->
    <string name="privacy_policy_url">https://www.freeprivacypolicy.com/privacy/view/6eb30341b85f9862dd069abed572d0f7</string>

    <!-- play store application link more apps -->
    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=Solodroid</string>

    <!--Navigation Drawer Menu-->
    <string name="drawer_books_list">Ebook List</string>
    <string name="drawer_read_later">Favorite</string>
    <string name="drawer_rate">Rate</string>
    <string name="drawer_more">More</string>
    <string name="drawer_about">About</string>
    <string name="drawer_other">Other</string>

    <!--app about information-->
    <string name="about_app_name">Application Name</string>
    <string name="about_app_version">Build Version</string>
    <string name="about_app_email">Email</string>
    <string name="about_app_copyright">Copyright</string>
    <string name="about_app_rate">Rate</string>
    <string name="about_app_more">More</string>
    <string name="about_app_privacy_policy">Terms &amp; Policies</string>
    <string name="sub_about_app_version">Version 3.1.0</string>
    <string name="sub_about_app_email">help.solodroid@gmail.com</string>
    <string name="sub_about_app_copyright">Copyright &#169; 2020 Solodroid Developer \n All rights reserved</string>
    <string name="sub_about_app_rate">Give your rate and feedback</string>
    <string name="sub_about_app_more">More apps from developer</string>
    <string name="sub_about_app_privacy_policy">Terms &amp; Policies of Android Ebook App</string>

    <!--others-->
    <string name="menu_search">Search</string>
    <string name="search_text">Search Book&#8230;</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="press_again_to_exit">Press again to exit app</string>
    <string name="option_set_favorite">Add to Favorite</string>
    <string name="option_unset_favorite">Remove From Favorite</string>
    <string name="favorite_added">Added to Favorite</string>
    <string name="favorite_removed">Removed from Favorite</string>
    <string name="option_set_share">Share to Friends</string>
    <string name="share_content">I Would like to share this with you. Here You Can Download This Application from PlayStore </string>
    <string name="msg_search_input">Please Insert Keyword</string>
    <string name="msg_dialog_finish_reading">Are you sure you finished reading?</string>
    <string name="option_yes">Yes</string>
    <string name="option_cancel">Cancel</string>
    <string name="title_dialog_finish_reading">Finish Read Book</string>

</resources>